re PR tree-optimization/49478 (ice in expand_widen_pattern_expr with -O3)

PR tree-optimization/49478
        * tree-vect-loop.c (vectorizable_reduction): Handle DOT_PROD_EXPR
        with constant operand.

From-SVN: r175255